[a11y] `AnchorNav` on small or zoomed in screens inaccessible elements fix (#595)
* fixing the inaccessible nav items when on very small or zoomed in screens

* accommodate for the container padding

* remove custom anchoring (scroll to) in favor of native - because preventing default functionality doesn't move focus to an element which is an a11y offense.

* fixing the inaccessible nav items when on very small or zoomed in screens

* accommodate for the container padding

* remove custom anchoring (scroll to) in favor of native - because preventing default functionality doesn't move focus to an element which is an a11y offense.

* Remove the obsolete test for custom smooth scrolling

* added changeset

* align AnchorNav focus test buttons to start of the container

---------

--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -80,6 +80,8 @@
   width: 100%;
   position: relative;
   z-index: 91; /* must be higher than subdomain nav bar */
+  max-height: calc(100vh - var(--base-size-12) * 2);
+  overflow-y: auto;
 }
 
 .AnchorNav--with-default-background-color .AnchorNav-inner-container {
